src/test/ui/impl-trait/projection-mismatch-in-impl-where-clause.stderr
error[E0277]: the trait bound `(): Test` is not satisfied
  --> $DIR/projection-mismatch-in-impl-where-clause.rs:13:14
   |
LL | fn test() -> impl Test {
   |              ^^^^^^^^^ the trait `Test` is not implemented for `()`
LL |
LL |     ()
   |     -- return type was inferred to be `()` here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
